--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,16 +1,16 @@
 ;----Colors-------------------------------------------------------------------
 [colors]
-background = #000
-background-alt = #444
+background = #2e3440
+background-alt = #434C5E
 
-foreground = #dfdfdf
-foreground-alt = #f0f0f0
+foreground = #ECEFF4
+foreground-alt = #D8DEE9
 
-primary = #006699
-secondary = #003366
-alert = #9966CC
+primary = #5E81AC
+secondary = #81A1C1
+alert = #8FBCBB
 
-underline = #0033CC
+underline = #88C0D0
 ;-----------------------------------------------------------------------------
 
 ;----Composite-----------------------------------------------------------------
@@ -46,8 +46,8 @@ foreground = ${colors.foreground}
 line-size = 2
 line-color = #f00
 ;----Border--------------------------------------------------------------------
-border-size = 0
-border-color = #fff
+border-bottom-size = 0
+border-color = ${colors.secondary}
 ;----Margin\Padding------------------------------------------------------------
 padding-left = 5
 padding-right = 5
